[package]
name = "rubberhose"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
aes = "0.7"
bitvec = "1.0"
log = "0.4.0"
pretty_env_logger = "0.4"

[features]
default = ["cache_address_table", "sanitize_all_ptrs"]
cache_address_table = []
sanitize_all_ptrs = []
